fixing z-index of React-select and react-datepicker relative to LightButton

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -170,7 +170,7 @@ html {
 
 .light-btn-transition {
 	background-image: var(--lightBtnGradientBg);
-	z-index: 1;
+	z-index: 0;
 }
 
 .light-btn-transition::before {
